# kis-cli

./: .dockerignore  .env.example  .gitignore  AGENT.md  Cargo.toml  Dockerfile  Dockerfile.web  PROMPT.md  README.md  Taskfile.yaml  brief.yaml  config.example.toml  daytrade.yaml  docker-compose.yml  stop-loss.yaml  telegram.yaml
crates/kis-cli/: Cargo.toml
crates/kis-cli/src/: error.rs  main.rs
crates/kis-cli/src/commands/: analyze.rs  auth.rs  backtest.rs  brief.rs  helpers.rs  installer.rs  mod.rs  signal_watch.rs  skill.rs  stop_loss.rs  telegram.rs
crates/kis-cli/src/commands/daytrade/: daemon.rs  history.rs  mod.rs  paper.rs  period.rs  run.rs
crates/kis-cli/src/commands/fo/: mod.rs
crates/kis-cli/src/commands/stock/: dome.rs  usa.rs
crates/kis-cli/src/viewer/: mod.rs
crates/kis-core/: Cargo.toml
crates/kis-core/src/: client.rs  config.rs  lib.rs  models.rs  rate_limit.rs  token.rs  ws.rs
crates/kis-core/src/api/bond/order_account/: inquire_psbl_order.rs  inquire_psbl_rvsecncl.rs
crates/kis-core/src/api/bond/quotations/: inquire_asking_price.rs  inquire_ccnl.rs  inquire_price.rs  search_bond_info.rs
crates/kis-core/src/api/bond/realtime/: h0bjasp0.rs
crates/kis-core/src/api/domestic_stock/: mod.rs
crates/kis-core/src/api/domestic_stock/elw/: compare_stocks.rs  cond_search.rs  indicator_trend_daily.rs  indicator_trend_minute.rs  lp_trade_trend.rs  quick_change.rs  volatility_trend_daily.rs  volatility_trend_tick.rs
crates/kis-core/src/api/domestic_stock/market_analysis/: comp_program_trade_daily.rs  comp_program_trade_today.rs  daily_credit_balance.rs  daily_short_sale.rs  exp_price_trend.rs  inquire_daily_trade_volume.rs  inquire_investor_time_by_market.rs  intstock_grouplist.rs  intstock_multprice.rs  intstock_stocklist_by_group.rs  investor_trend_estimate.rs  mktfunds.rs  mod.rs  overtime_exp_trans_fluct.rs  pbar_tratio.rs  program_trade_by_stock_daily.rs  tradprt_byamt.rs
crates/kis-core/src/api/domestic_stock/order_account/: inquire_account_balance.rs  inquire_balance.rs  inquire_balance_2.rs  inquire_credit_psamount.rs  inquire_daily_ccld_2.rs  inquire_deposit.rs  inquire_period_profit.rs  inquire_psbl_rvsecncl.rs  inquire_psbl_sell.rs  intgr_margin.rs  order_credit.rs  order_resv_rvsecncl.rs  order_rvsecncl.rs
crates/kis-core/src/api/domestic_stock/quotations/: inquire_asking_price_exp_ccn.rs  inquire_daily_price.rs  inquire_time_overtimeconclusion.rs  mod.rs  nav_comparison_daily_trend.rs  nav_comparison_time_trend.rs
crates/kis-core/src/api/domestic_stock/ranking/: after_hour_balance.rs  exp_trans_updown.rs  finance_ratio.rs  fluctuation.rs  market_cap.rs  market_value.rs  near_new_highlow.rs  overtime_volume.rs  prefer_disparate_ratio.rs  profit_asset_index.rs  short_sale.rs  volume_rank.rs
crates/kis-core/src/api/domestic_stock/realtime/: h0stnav0.rs  h0stoaa0.rs  h0stpgm0.rs  h0uncnt0.rs  h0unmko0.rs  h0unpgm0.rs  h0upanc0.rs
crates/kis-core/src/api/domestic_stock/sector/: comp_interest.rs  exp_total_index.rs  inquire_index_category_price.rs  inquire_index_daily_price.rs  news_title.rs
crates/kis-core/src/api/domestic_stock/symbol_info/: credit_by_company.rs  estimate_perform.rs  forfeit.rs  growth_ratio.rs  income_statement.rs  lendable_by_company.rs  list_info.rs  merger_split.rs  mod.rs  other_major_ratios.rs  profit_ratio.rs  pub_offer.rs  purreq.rs  sharehld_meet.rs  stability_ratio.rs
crates/kis-core/src/api/futureoption_domestic/order_account/: inquire_balance.rs  inquire_deposit.rs  margin_rate.rs  order_rvsecncl.rs
crates/kis-core/src/api/futureoption_domestic/quotations/: mod.rs
crates/kis-core/src/api/futureoption_domestic/realtime/: h0cfcnt0.rs  h0euanc0.rs  h0eucni0.rs  h0ifcni0.rs  h0ifcnt0.rs  h0ioasp0.rs  h0iocnt0.rs  h0mfcnt0.rs  h0zfanc0.rs  h0zfasp0.rs
crates/kis-core/src/api/futureoption_overseas/order_account/: inquire_ccld.rs  margin_detail.rs  order.rs  order_rvsecncl.rs
crates/kis-core/src/api/futureoption_overseas/quotations/: inquire_time_futurechartprice.rs  investor_unpd_trend.rs  mod.rs  opt_daily_ccnl.rs  opt_detail.rs  opt_tick_ccnl.rs  search_contract_detail.rs  search_opt_detail.rs
crates/kis-core/src/api/futureoption_overseas/realtime/: hdfff1c0.rs  (+1 more)
crates/kis-core/src/api/oauth/: hashkey.rs  revokep.rs  tokenp.rs
crates/kis-core/src/api/overseas_stock/: mod.rs
crates/kis-daemon/: Cargo.toml
crates/kis-daemon/src/: config_watch.rs  lib.rs  shutdown.rs
crates/kis-data/: Cargo.toml
crates/kis-data/src/: lib.rs
crates/kis-data/src/symbols/: master.rs  mod.rs  store.rs  sync.rs
crates/kis-trade/: Cargo.toml
crates/kis-trade/src/: lib.rs
crates/kis-trade/src/common/: client.rs  mod.rs  notify.rs  resolve.rs  session.rs
crates/kis-trade/src/daytrade/: daemon.rs  dconfig.rs  engine.rs  fetch.rs  live.rs  mod.rs  paper.rs  run.rs  signal_watch.rs
crates/kis-trade/src/stop_loss/: mod.rs
crates/kis-trade/src/telegram/: mod.rs
crates/kis-web/: Cargo.toml
crates/kis-web/migrations/: 0001_init.sql  0002_journal.sql
crates/kis-web/src/: config.rs  crypto.rs  db.rs  main.rs  positions.rs  state.rs  static_files.rs  symbols.rs
crates/kis-web/src/api/: account.rs  auth.rs  journal.rs  mod.rs  portfolio.rs  quotes.rs  stream.rs  symbols.rs  watchlist.rs
crates/kis-web/src/auth/: mod.rs  password.rs  session.rs
crates/kis-web/src/kis/: mod.rs
crates/kis-web/web/: package.json  pnpm-lock.yaml  vite.config.ts
crates/kis-web/web/src/: index.css  main.tsx  routeTree.gen.ts
crates/kis-web/web/src/api/: account.ts  auth.ts  client.ts  journal.ts  portfolio.ts  positions.ts  quotes.ts  schema.d.ts  stream.ts
crates/kis-web/web/src/components/: Sparkline.tsx
crates/kis-web/web/src/lib/: quote.ts
crates/kis-web/web/src/routes/: __root.tsx  index.tsx  journal.tsx  login.tsx  portfolio.tsx  settings.tsx  symbol.$code.tsx  watchlist.tsx
crates/kisd-daytrade/: Cargo.toml
crates/kisd-daytrade/src/: main.rs
crates/kisd-stop-loss/: Cargo.toml
crates/kisd-stop-loss/src/: main.rs
crates/kisd-telegram/: Cargo.toml
crates/kisd-telegram/src/: main.rs
(+668 files in other folders)
