[package]
name = "kis-cli"
version = "1.0.22"
edition = "2024"

[[bin]]
name = "kis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2"
encoding_rs = "0.8"
wry = "0.46"
tao = "0.30"
tokio-cron-scheduler = "0.13"
chrono-tz = "0.10"
fs2 = "0.4"
notify = "8"
notify-debouncer-mini = "0.6"
ulid = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
