[package]
name = "kis-cli"
version = "1.0.22"
edition = "2024"

[[bin]]
name = "kis"
path = "src/main.rs"

[features]
# 기본(데스크톱) 빌드는 wry/tao 기반 네이티브 차트 뷰어 포함.
# 헤드리스/컨테이너 빌드는 `--no-default-features` 로 차트 뷰어(및 WebKitGTK 시스템
# 라이브러리 의존)를 제외한다. `--chart` 는 런타임에 친절한 에러로 거부된다.
default = ["chart"]
chart = ["dep:wry", "dep:tao"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2"
encoding_rs = "0.8"
wry = { version = "0.46", optional = true }
tao = { version = "0.30", optional = true }
tokio-cron-scheduler = "0.13"
chrono-tz = "0.10"
fs2 = "0.4"
notify = "8"
notify-debouncer-mini = "0.6"
ulid = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
