[workspace]
resolver = "2"
members = [
    "crates/kis-core",
    "crates/kis-data",
    "crates/kis-analysis",
    "crates/kis-daemon",
    "crates/kis-trade",
    "crates/kisd-telegram",
    "crates/kisd-stop-loss",
    "crates/kisd-daytrade",
    "crates/kis-cli",
]

[workspace.package]
version = "1.0.23"
edition = "2024"

# 릴리스 빌드 최적화 — 데몬 바이너리(kisd-*)는 자기 엔진만 링크되고 나머지(backtest/analyze/
# 뷰어/타 데몬)는 링커 DCE 로 제거 → strip+thin-LTO 로 컨테이너 이미지를 더 줄인다.
# panic=abort: 언와인딩 테이블 제거(데몬은 패닉 시 그냥 종료). catch_unwind 미사용이라 안전.
[profile.release]
lto = "thin"
strip = true
panic = "abort"

# 모든 멤버 크레이트가 공유하는 의존성 버전(중복 제거 + 일괄 업그레이드).
# 멤버 Cargo.toml 에서는 `dep = { workspace = true }` 로 참조한다.
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2"
encoding_rs = "0.8"
wry = "0.46"
tao = "0.30"
tokio-cron-scheduler = "0.13"
chrono-tz = "0.10"
fs2 = "0.4"
notify = "8"
notify-debouncer-mini = "0.6"
ulid = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
