[package]
name = "kis-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dirs = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
fs2 = { workspace = true }
tracing = { workspace = true }
