[package]
name = "kis-data"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
zip = { workspace = true }
encoding_rs = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
